--- a/src/auto-complete.scss
+++ b/src/auto-complete.scss
@@ -12,7 +12,7 @@ ion-auto-complete {
   }
 
   ul {
-    position: absolute;
+    position: inherit;
     width: inherit;
     margin-top: 0px;
     background: #FFF;
